Completo da Aula 02, Incluindo Símbolos, Emojis e Comentários

--- a/Exerc 02/index.html
+++ b/Exerc 02/index.html
@@ -16,13 +16,35 @@
         parágrafo
         de qualquer jeito.
         Basta colocar tudo
-        no meio do par de tags &lt;P&GT; e &lt;/p&gt;
+        no meio do par de tags &lt;P&GT; e &lt;/p&gt; <!--&LT = LESS THAN (MENOR QUE, SINAL MENOR) / &GT = GREATER THAN (MAIOR QUE, SINAL DE MAIOR)-->
     </p>
     <p>Se precisar quebrar
         o texto em algum lugar
         específico <br> como esse,
         você pode usar a tag &lt;br&gt;
     </p>
-    
+    <P>Vamos adicionar símbolos especiais
+        <br>
+        Primero Símbolo Marca Registrada: &reg;
+        <br>
+        Segundo Símbolo Copyright: &copy;
+        <br>
+        Terceiro Símbolo TradeMark: &trade;
+        <br>
+        Moedas - Euro: &euro;
+        <br>
+        Moedas - Libras(Pound): &pound;
+        <br>
+        Símbolo Delta: &Delta; <!--A diferenças entre colocar o D e o d pois o programa reconhecerá como símbolo delta maiusculo ou minusculo-->
+        <br>
+        E por ai vai, tem uma lista e um site na pasta com mais exemplos.
+        </P>
+        <p>Agora vamos adicionar alguns Emoji:
+            &#x1F47D; <!--Não ficou azul como exemplificado na aula, mas deu certo na pagina... Confia-->
+            &#x1F919;
+            
+
+
+        </p>
 </body>
 </html>
