--- a/Exerc 10/index.html
+++ b/Exerc 10/index.html
@@ -11,8 +11,14 @@
     <p>Você pode acessar o meu<a href="https://github.com/OMarcoSantos" target="_blank" rel="external"> repositório público no GitHub</a></p>
     <p>Você pode acessar também meu <a href="https://www.youtube.com/channel/UCpps_qzLX2dA2xabhHoXOrg" target="_blank" rel="external">canal do Youtube</a></p> <!--Os Atributos Target e Rel são recomendados o uso-->
 
-    <h2>Usando links Internos</h2>
+    <h1>Usando links Internos</h1>
     <p>Está é a primeira pagina do site. Se você quiser, pode acessar também a minha <a href="pag02.html" rel="next">Segunda página</a></p>
     <p>Você também pode acessar a nossa <a href="noticias/pag03.html" rel="next">página de notícias</a></p>
+
+    <h1> Lista para Download</h1>
+    <ul type="square">
+        <li><a href="livro/10 - Ligações em toda parte.pdf" download="livro/10 - Ligações em toda parte.pdf" type="application/pdf">Baixar o Livro em PDF</a></li> <!--Quando não temos definido para colocarmos nessa tag, inserimos a principio o # e assim que definido um link só substituimos-->
+        <li><a href="livro/10 - Ligações em toda parte.zip" download="livro/10 - Ligações em toda parte.zip" type="application/zip">Baixar o Livro Compactado em PDF</a></li>
+    </ul>  
 </body>
 </html>
