Projeto Site Android

--- a/Exerc 21/caixa02.html
+++ b/Exerc 21/caixa02.html
@@ -20,6 +20,7 @@
         nav {
             background-color: brown;
             padding: 3px;
+            box-shadow: 1px 1px black
             }
 
         nav > a {
@@ -38,6 +39,7 @@
             background-color: rgb(222, 212, 212);
             padding: 10px;
             margin: 10px;
+            border-radius: 20px;
         }
         
         article {
@@ -53,7 +55,11 @@
             background-color: black;
             color: white;
             text-align: center;
-            padding: 5x;
+            padding: 4px;
+            margin: 0px;
+        }
+
+        footer > p {
             margin: 0px;
         }
 
